[gd_scene load_steps=27 format=3 uid="uid://oiehbor0dlqx"]

[ext_resource type="Script" uid="uid://dfiwoln8mdwm8" path="res://Scripts/EditorScreen.gd" id="1_sd512"]
[ext_resource type="Theme" uid="uid://dbgs4id7y5d1c" path="res://UI/Themes/Dark.tres" id="1_v0ton"]
[ext_resource type="PackedScene" uid="uid://btre5j66mpchy" path="res://Scenes/Stages/Helen House/HelenHouse.tscn" id="2_p1t5g"]
[ext_resource type="Texture2D" uid="uid://xllpr3qc064c" path="res://UI/Play.png" id="3_g6u4d"]
[ext_resource type="Texture2D" uid="uid://dgacnkv2dc65s" path="res://UI/PlayBackwards.png" id="3_mr8sb"]
[ext_resource type="Texture2D" uid="uid://dts4eh6hyt8p3" path="res://UI/SkipBackwards.png" id="3_r4ytj"]
[ext_resource type="Texture2D" uid="uid://bwhgy4u37jmo1" path="res://UI/Pause.png" id="4_ba3jn"]
[ext_resource type="Texture2D" uid="uid://dhx2v2fd0egxd" path="res://UI/FastBackwards.png" id="4_wy7jo"]
[ext_resource type="Texture2D" uid="uid://cttgtbu1xllwq" path="res://UI/Stop.png" id="8_20noo"]
[ext_resource type="Texture2D" uid="uid://dsr03w7r667fw" path="res://UI/FastForward.png" id="8_v0ton"]
[ext_resource type="Texture2D" uid="uid://bphwtliq2ahus" path="res://UI/SkipForward.png" id="9_20noo"]
[ext_resource type="Texture2D" uid="uid://ckg2ihy105ttj" path="res://UI/Record.png" id="10_wy7jo"]
[ext_resource type="PackedScene" uid="uid://dyuhywnk8heav" path="res://Scenes/Stages/Helen House/HelenHouseMovementRows.tscn" id="12_20noo"]
[ext_resource type="PackedScene" uid="uid://dwhrame6udwbh" path="res://Scenes/Stages/Helen House/HelenHouseFlyout.tscn" id="13_wy7jo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_g6u4d"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wy7jo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v0ton"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_20noo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mch36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxi2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bdf35"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2w5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bv2rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gx718"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gu086"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_othvt"]

[node name="EditorScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v0ton")
script = ExtResource("1_sd512")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(1280, 720)

[node name="HelenHouse" parent="SubViewport" instance=ExtResource("2_p1t5g")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.187176, 0.187176, 0.187176, 1)

[node name="CameraPreview" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
offset_left = -4.0
offset_top = 48.0
offset_right = -4.0
grow_horizontal = 0
texture = SubResource("ViewportTexture_g6u4d")
expand_mode = 5
stretch_mode = 6

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 144.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to Pneumatic Plaything Animatronic Simulator!

You can press the buttons to the side to 
control the bots manually, adjust their flows, 
change the camera angle, or switch their cosmetics.

Open the Controls menu to see all of the keybinds."
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 44.0
grow_horizontal = 2

[node name="Wordmark" type="Label" parent="MenuBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -16.0
offset_right = -4.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Pneumatic Plaything v0.2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageSelector" type="OptionButton" parent="MenuBar"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 260.0
offset_bottom = 36.0
selected = 0
item_count = 1
popup/item_0/text = "Helen House (Custom)"
popup/item_0/id = 0

[node name="LoadShowtapeButton" type="Button" parent="MenuBar"]
visible = false
layout_mode = 0
offset_left = 264.0
offset_top = 4.0
offset_right = 392.0
offset_bottom = 36.0
text = "Load Showtape"

[node name="NewShowtapeButton" type="Button" parent="MenuBar"]
visible = false
layout_mode = 0
offset_left = 396.0
offset_top = 4.0
offset_right = 524.0
offset_bottom = 36.0
text = "New Showtape"

[node name="SaveShowtapeButton" type="Button" parent="MenuBar"]
visible = false
layout_mode = 0
offset_left = 528.0
offset_top = 4.0
offset_right = 656.0
offset_bottom = 36.0
text = "Save Showtape"

[node name="ControlsButton" type="Button" parent="MenuBar"]
layout_mode = 0
offset_left = 264.0
offset_top = 4.0
offset_right = 392.0
offset_bottom = 36.0
text = "Controls"

[node name="CreditsButton" type="Button" parent="MenuBar"]
layout_mode = 0
offset_left = 396.0
offset_top = 4.0
offset_right = 524.0
offset_bottom = 36.0
text = "Credits"

[node name="SequencerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 52.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="TransportControls" type="Control" parent="SequencerPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="SequencerPanel/TransportControls"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 196.0
offset_bottom = 40.0
text = "0:00:00:00"
vertical_alignment = 1

[node name="Centered" type="Control" parent="SequencerPanel/TransportControls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -24.0
offset_right = 178.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="StepBackwardsButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 44.0
tooltip_text = "Step backward 1 frame"
icon = ExtResource("3_r4ytj")

[node name="FastBackwardsButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 44.0
tooltip_text = "Play backwards at 2x speed"
icon = ExtResource("4_wy7jo")

[node name="PlayBackwardsButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 92.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 44.0
tooltip_text = "Play backwards"
icon = ExtResource("3_mr8sb")

[node name="PauseButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 136.0
offset_top = 4.0
offset_right = 176.0
offset_bottom = 44.0
tooltip_text = "Pause"
icon = ExtResource("4_ba3jn")

[node name="StopButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 180.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 44.0
tooltip_text = "Stop playback and return to frame 0"
icon = ExtResource("8_20noo")

[node name="PlayButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 224.0
offset_top = 4.0
offset_right = 264.0
offset_bottom = 44.0
tooltip_text = "Play"
icon = ExtResource("3_g6u4d")

[node name="FastForwardButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 268.0
offset_top = 4.0
offset_right = 308.0
offset_bottom = 44.0
tooltip_text = "Play at 2x speed"
icon = ExtResource("8_v0ton")

[node name="StepForwardButton" type="Button" parent="SequencerPanel/TransportControls/Centered"]
layout_mode = 0
offset_left = 312.0
offset_top = 4.0
offset_right = 352.0
offset_bottom = 44.0
tooltip_text = "Step forward 1 frame"
icon = ExtResource("9_20noo")

[node name="RecordButton" type="Button" parent="SequencerPanel/TransportControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = -4.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "Start recording"
icon = ExtResource("10_wy7jo")

[node name="TimelinePanel" type="Panel" parent="SequencerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 48.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VScrollBar" type="VScrollBar" parent="SequencerPanel/TimelinePanel"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = -4.0
grow_vertical = 2
max_value = 18.0
step = 1.0

[node name="InvisibleMask" type="Control" parent="SequencerPanel/TimelinePanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="RowsHandle" type="Control" parent="SequencerPanel/TimelinePanel/InvisibleMask"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HelenHouseMovementRows" parent="SequencerPanel/TimelinePanel/InvisibleMask/RowsHandle" instance=ExtResource("12_20noo")]
layout_mode = 1

[node name="VSeparator" type="VSeparator" parent="SequencerPanel/TimelinePanel"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 398.0
offset_right = 4.0
grow_vertical = 2

[node name="HelenHouseFlyout" parent="." instance=ExtResource("13_wy7jo")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 48.0
offset_right = 140.0
offset_bottom = 48.0

[node name="ControlsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputEater" type="Button" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wy7jo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_v0ton")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_20noo")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mch36")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_fxi2g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_bdf35")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j2w5p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bv2rw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gx718")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_gu086")
theme_override_styles/normal = SubResource("StyleBoxEmpty_othvt")

[node name="DialogPanel" type="Panel" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ControlsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Fullscreen camera view: ESC
Play/Pause: Space
Play Reverse: Shift + Space
Fast Forward: Shift + Right Arrow
Fast Reverse: Shift + Left
Step Forward: Right Arrow
Step Backward: Left Arrow
Go to start of showtape: Home
Change Camera Angle: Tab"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputEater" type="Button" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wy7jo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_v0ton")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_20noo")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mch36")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_fxi2g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_bdf35")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j2w5p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bv2rw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gx718")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_gu086")
theme_override_styles/normal = SubResource("StyleBoxEmpty_othvt")

[node name="DialogPanel" type="Panel" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Pneumatic Plaything Animatronic Simulator

Project Oversight: Persephone (KawaiiZenbo)

Interface Design: Persephone
Simulator Backend: Persephone
3-Stage Helen Henny Model: Persephone

This project is not associated with CEC Entertainment LLC. 
or Creative Engineering Inc."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CameraFullScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_g6u4d")
expand_mode = 2

[connection signal="pressed" from="MenuBar/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MenuBar/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/StepBackwardsButton" to="." method="_on_step_backwards_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/FastBackwardsButton" to="." method="_on_fast_backwards_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/PlayBackwardsButton" to="." method="_on_play_backwards_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/FastForwardButton" to="." method="_on_fast_forward_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/Centered/StepForwardButton" to="." method="_on_step_forward_button_pressed"]
[connection signal="pressed" from="SequencerPanel/TransportControls/RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="value_changed" from="SequencerPanel/TimelinePanel/VScrollBar" to="." method="_on_v_scroll_bar_value_changed"]
[connection signal="pressed" from="ControlsScreen/InputEater" to="." method="_on_controls_input_eater_pressed"]
[connection signal="pressed" from="CreditsScreen/InputEater" to="." method="_on_credits_input_eater_pressed"]
